# NovaEngine

./: CMakeLists.txt
src/: Node.cpp  Node.hpp  Nova.cpp  Nova.hpp  Structs.hpp  Threads.hpp
src/display/: Window.cpp  Window.hpp  XlibWindow.cpp  XlibWindow.hpp
